ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
  labels:
    app: grafana
  name: grafana-monitoring-ingress
  namespace: monitoring
spec:
  rules:
  - host: grafana.monitoring.app.sierraalpha.co.nz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grafana
            port:
              number: 80
  tls:
  - hosts:
    - grafana.monitoring.app.sierraalpha.co.nz
    secretName: grafana-monitoring-app-sierraalpha-tls
---
